# bierman-web

./: .gitignore  LICENSE  README.md
backend/: .env.example  README.md  pyproject.toml
backend/analyze/: apps.py  models.py  urls.py  views.py
backend/analyze/analysis/: __init__.py  code_analyzer.py
backend/analyze/core/: __init__.py  codebase.py
backend/analyze/questions/: __init__.py  question_generator.py
backend/analyze/summarization/: __init__.py  summarizer.py
backend/analyze/tests/: test_code_analyzer.py  test_codebase.py  test_question_generator.py  test_summarizer.py
backend/backend/: settings.py  urls.py
frontend/: .env.example  package.json  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/services/: analyze.test.ts  analyze.ts
frontend/src/types/: response.types.ts
frontend/tests/: setup.ts
